--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="assets/img/Logo.png" alt="logo" id="logo">
+        <span id="logo-text">Todolist</span>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="buttons">
+                <span id="add-task">Add Task</span> <span id="add-section">Add Section</span>
+            </div>
+            <div class="divider"></div>
+            <div class="lists">
+                <div class="list-1"> 
+                    <div class="title">New Task</div></div>
+                    <ul><li class="done"> Quarterly Newsletter <span class=" buttonz editorial">Editorial</span></li></ul>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
