--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    
     <header>
         <img src="assets/img/Logo.png" alt="logo" id="logo">
         <span id="logo-text">Todolist</span>
@@ -24,7 +25,12 @@
                 <div class="list-1"> 
                     <div class="title">New Task</div></div>
                     <ul><li class="done"> Quarterly Newsletter <span class=" buttonz editorial">Editorial</span></li></ul>
+
+                    <div class="title">Today</div></div>
+
             </div>
+
+
         </div>
     </main>
 
