--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+
     <header>
         <img src="assets/img/Logo.png" alt="logo" id="logo">
         <span id="logo-text">Todolist</span>
@@ -23,11 +23,40 @@
             <div class="divider"></div>
             <div class="lists">
                 <div class="list-1"> 
-                    <div class="title">New Task</div></div>
-                    <ul><li class="done"> Quarterly Newsletter <span class=" buttonz editorial">Editorial</span></li></ul>
+                    <div class="title">New Task</div>
+                </div>
+                    <ul>
+                        <li class="done"> Quarterly Newsletter <span class=" buttonz editorial">Editorial</span>
+                        </li>
+                    </ul>
 
-                    <div class="title">Today</div></div>
+                <div class="list-1"> 
+                    <div class="title">Today</div>
+                </div>
+                    <ul>
+                        <li class="done"> Recruiting <span class=" buttonz editorial">Editorial</span>
+                        </li>
+                        <li class="done"> Mobile app <span class=" buttonz q1goals">Editorial</span>
+                        </li>
+                        <li class="undone"> Interviews <span class=" buttonz recruiting">Recruiting</span>
+                        </li>
+                        <li class="done"> Submit update <span class=" buttonz mobile">Mobile</span>
+                        </li>
+                    </ul>
 
+                    <div class="list-1"> 
+                        <div class="title">Upcoming</div>
+                    </div>
+                        <ul>
+                            <li class="undone"> Schedule meeting with Alex
+                            </li>
+                            <li class="done"> Homepage refresh app <span class=" buttonz website">Website</span>
+                            </li>
+                            <li class="done"> Onboard new Sales team members <span class=" buttonz sales">Sales</span>
+                            </li>
+                            <li class="done"> Review editorial calendar <span class=" buttonz editorial">Editorial</span>
+                            </li>
+                        </ul>
             </div>
 
 
